add_library(common STATIC 
	"json/json.hpp"
	"bit_writer.cpp"
	"bit_writer.h"
	"common_function.cpp"
	"common_function.h"
	"common_header.h"
	"config_parser.cpp"
	"config_parser.h"
	"event_notify.hpp"
	"file_helper.cpp"
	"file_helper.h"	 
	"log_writer.cpp"
	"log_writer.h"
	"singleton.h"
	"string_helper.hpp"
	"system_monitor.cpp"
	"system_monitor.h"
	"timer_manager.cpp"
	"timer_manager.h"
)
